Increased site responsiveness at 500px & 800px

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' href="style/about.css">
+    <link rel="stylesheet" href="style/index.css">
     <title>Info</title>
 </head>
 <body>
@@ -12,10 +12,10 @@
         <h1> ABOUT </h1>
 
         <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-            <a href="projects.html">Projects</a>
+            <a href="index.html" class="Link">Home</a>
+            <a href="about.html" class="Link">About</a>
+            <a href="contact.html" class="Link">Contact</a>
+            <a href="projects.html" class="Link">Projects</a>
         </nav>
 
     </header>
