--- a/contact.html
+++ b/contact.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=    <h1> ABOUT </h1>, initial-scale=1.0">
-    <link rel="stylesheet" href='style/contact.css'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href='style/index.css'>
     <title>Contact</title>
 </head>
 <body>
     <header>
             <h1> CONTACT </h1>
             <nav>
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="contact.html">Contact</a>
-                <a href="projects.html">Projects</a>
+                <a href="index.html" class="Link">Home</a>
+                <a href="about.html" class="Link">About</a>
+                <a href="contact.html" class="Link">Contact</a>
+                <a href="projects.html" class="Link">Projects</a>
             </nav>
     
     </header>
