--- a/index.html
+++ b/index.html
@@ -2,75 +2,53 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/index.css">
-    <title>HomePage</title>
+    <title>Document</title>
 </head>
 <body>
     <header>
         <h1>John Barnett</h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-            <a href="projects.html">Projects</a>
+            <a href="index.html" class="Link">Home</a>
+            <a href="about.html" class="Link">About</a>
+            <a href="contact.html" class="Link">Contact</a>
+            <a href="projects.html" class="Link">Projects</a>
         </nav>
     </header>
-
-    <section class="mainImg">
+    <section>
         <div class="img1">
             <H3>John Barnett</H3>
-            <a href="projects.html">Projects</a>
+            <a href="projects.html" class="Link">Projects</a>
         </div>
     </section>
 
-    <section class="footerImgs">
-        <div class="image">
-            <div class="text">
+    <div class="temporary">
+        <section class="footerImgs">
+            <div class="image" id="imgText">
+                <p>project 1</p>
             </div>
-          </div>
-
-        <div class="image">
-            <div class="text">
+            <div class="image" id="imgText">
+                <p>project 2</p>
             </div>
-        </div>
-
-        <div class="image">
-            <div class="text">
+            <div class="image" id="imgText">
+                <p>project 3</p>
             </div>
-          </div>
-    </section>
+        </section>
 
-
-    <section class="footerTxt">
-        <p>Encryption Machine</p>
-        <p>Cure for Cancer</p>
-        <p>House of Horrors</p>
-    </section>
-
-    <section class="footerImgs">
-        <div class="image">
-            <div class="text">          
+        <section class="footerImgs">
+            <div class="image" id="imgText">
+                <p>project 4</p>
             </div>
-        </div>
-
-        <div class="image">
-            <div class="text">             
+            <div class="image" id="imgText">
+                <p>project 5</p>
             </div>
-          </div>
-
-        <div class="image">
-            <div class="text">            
+            <div class="image" id="imgText">
+                <p>project 6</p>
             </div>
-        </div>
-    </section>
-
-    <section class="footerTxt">
-        <p>Book of all Knowledge</p>
-        <p>Free Cash Machine</p>
-        <p>Perfect Life</p>
-    </section>
-
-    <footer><a href="contact.html">Contact Me</a></footer>
+        </section>
+    </div>
+    <footer><a href="contact.html" class="Link">Contact Me</a></footer>
 </body>
 </html>
